# schwarzschild-engine

./: Cargo.toml
cmd/: run.rs  wgpu.rs
crates/engine/: Cargo.toml  geometry.rs  lib.rs  movement.rs
crates/gpu/: Cargo.toml  lib.rs  renderer.rs  shaders.rs  vertex.rs
crates/metal-gpu/: Cargo.toml
crates/utilities/: Cargo.toml  common.rs  lib.rs  obj_import.rs  prelude.rs  traits.rs
