[package]
name = "schwarzschild-engine"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# CRATES
engine = {path = "crates/engine"}
gpu = {path = "crates/gpu"}
utilities = {path = "crates/utilities"}
metal-gpu = {path = "metal-gpu"}
# 3RD PARTY
wgpu = "0.15"
pollster = "0.3"
winit = "0.28"
raw-window-handle = "0.5"
glam = "*"
tobj = "4"

[dependencies]
gpu.workspace = true
pollster.workspace = true
winit.workspace = true
wgpu.workspace = true
engine.workspace = true
tobj.workspace = true
utilities.workspace = true

[workspace]
members = [
    "crates/engine",
    "crates/gpu",
    "crates/metal-gpu",
    "crates/utilities",
]

[[bin]]
name = "run"
path = "cmd/run.rs"

[[bin]]
name = "wgpu"
path = "cmd/wgpu.rs"
